--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/ripleyaffect/2-fast-2-curious#readme",
   "dependencies": {
     "express": "^4.13.4"
+  },
+  "engines": {
+    "node": "6.2"
   }
 }
