Add Chat components

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "uuid": "^2.0.2"
   },
   "engines": {
     "node": "6.2"
