--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo 'No tests yet'",
-    "start": "node index.js"
+    "start": "node index.js",
+    "devup": "webpack --watch && nodemon"
   },
   "repository": {
     "type": "git",
