--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
+    "react-router": "^2.6.1",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "uuid": "^2.0.2"
   },
   "engines": {
